--- a/Backoffice/Components/Converter/Settings/ConverterSettingsComponent.razor
+++ b/Backoffice/Components/Converter/Settings/ConverterSettingsComponent.razor
@@ -10,60 +10,66 @@
     <h3>Liquidity Converter Settings</h3>
 </div>
 
-<table>
 @foreach (var repo in GeneralSettingCollection)
 {
-    <th>
-
-            <h1>
-                @repo.Caption
-            </h1>
-
-
-            <td class="align-middle">Broker Id</td>
-            <td class="align-middle">
-                <input type="text" class="form-control" @bind="repo.Settings.BrokerId"/>
-            </td>
-
-        <tr>
-            <td class="align-middle">Broker Account Id</td>
-            <td class="align-middle">
-                <input type="text" class="form-control" @bind="repo.Settings.BrokerAccountId"/>
-            </td>
-        </tr>
-        <tr>
-            <td class="align-middle">Broker Wallet Id</td>
-            <td class="align-middle">
-                <input type="text" class="form-control" @bind="repo.Settings.BrokerWalletId"/>
-            </td>
-        </tr>
-        <tr>
-            <td class="align-middle">Mark Up (Coefficient)</td>
-            <td class="align-middle">
-                <input type="number" class="form-control" @bind="repo.Settings.MarkUp"/>
-            </td>
-        </tr>
-        <tr>
-            <td class="align-middle">Expiration In Seconds</td>
-            <td class="align-middle">
-                <input type="number" class="form-control" @bind="repo.Settings.ExpirationInSeconds"/>
-            </td>
-        </tr>
-        <tr>
-            <td class="align-middle">Client Expiration In Seconds</td>
-            <td class="align-middle">
-                <input type="number" class="form-control" @bind="repo.Settings.ClientExpirationInSeconds"/>
-            </td>
-        </tr>
-        <tr>
-            <td class="align-middle">Cross assets (with ",")</td>
-            <td class="align-middle">
-                <input type="text" class="form-control" @bind="repo.CrossAssets"/>
-            </td>
-        </tr>
-    </th>
+    <div class="col">
+        <h2>
+            @repo.Caption
+        </h2>
+        <table>  
+            <tr>
+                <td class="align-middle">Broker Id</td>
+                <td class="align-middle">
+                    <input type="text" class="form-control" @bind="repo.Settings.BrokerId"/>
+                </td>
+            </tr>
+            <tr>
+                <td class="align-middle">Broker Account Id</td>
+                <td class="align-middle">
+                    <input type="text" class="form-control" @bind="repo.Settings.BrokerAccountId"/>
+                </td>
+            </tr>
+            <tr>
+                <td class="align-middle">Broker Wallet Id</td>
+                <td class="align-middle">
+                    <input type="text" class="form-control" @bind="repo.Settings.BrokerWalletId"/>
+                </td>
+            </tr>
+            <tr>
+                <td class="align-middle">Mark Up (Coefficient)</td>
+                <td class="align-middle">
+                    <input type="number" class="form-control" @bind="repo.Settings.MarkUp"/>
+                </td>
+            </tr>
+            <tr>
+                <td class="align-middle">Expiration In Seconds</td>
+                <td class="align-middle">
+                    <input type="number" class="form-control" @bind="repo.Settings.ExpirationInSeconds"/>
+                </td>
+            </tr>
+            <tr>
+                <td class="align-middle">Client Expiration In Seconds</td>
+                <td class="align-middle">
+                    <input type="number" class="form-control" @bind="repo.Settings.ClientExpirationInSeconds"/>
+                </td>
+            </tr>
+            <tr>
+                <td class="align-middle">Cross assets (with ",")</td>
+                <td class="align-middle">
+                    <input type="text" class="form-control" @bind="repo.CrossAssets"/>
+                </td>
+            </tr>
+            @if (GeneralSettingCollection.Count > 1)
+            {
+                <tr>
+                    <td rowspan="3">
+                        <li><button style="margin-left: 10px" type="button" class="btn-outline-warning btn" @onclick="() => DeleteBroker(repo.Caption)">Delete</button></li>
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
 }
-</table>
 
 <div>
     <ul class="nav align-middle">
@@ -150,6 +156,13 @@
 
         StateHasChanged();
     }
+
+    private void DeleteBroker(string id)
+    {
+        GeneralSettingCollection.RemoveAll(e => e.Caption == id);
+        StateHasChanged();
+    }
+    
     private void ApplySettings()
     {
         AskQuestion("Change Settings", "Apply a new Global settings. Are you sure?",
