empty status list fix

--- a/Backoffice/Components/Notifications/History/NotificationHistoryComponent.razor
+++ b/Backoffice/Components/Notifications/History/NotificationHistoryComponent.razor
@@ -159,7 +159,7 @@
         }
         else
         {
-            _statuses = history.StatusResponses;
+            _statuses = history.StatusResponses ?? new();
             SelectedPosition = positionId;
         }
         
