--- a/Backoffice/Components/Converter/History/ConverterHistoryComponent.razor
+++ b/Backoffice/Components/Converter/History/ConverterHistoryComponent.razor
@@ -24,8 +24,9 @@
         <th>ToAsset</th>
         <th>FromAssetVolume</th>
         <th>ToAssetVolume</th>
-        <th>FromAssetVolumeDifference (%)</th>
-        <th>ToAssetVolumeDifference (%)</th>
+        <th>Difference Asset</th>
+        <th>Difference Volume Abs</th>
+        <th>Difference Volume %</th>
         <th>IsFromFixed</th>
         <th>BrokerId</th>
         <th>AccountId</th>
@@ -47,17 +48,11 @@
     
     @{
         var rowNumber = _index;
-        decimal toDiffPercent = 0;
-        decimal fromDiffPercent = 0;
     }
     
     @foreach (var history in _histories)
     {
         rowNumber++;
-
-        fromDiffPercent = history.Quote.FromAssetVolumeDifference == 0 ? 0 : Math.Round((history.Quote.FromAssetVolumeDifference / (history.Quote.FromAssetVolume - history.Quote.FromAssetVolumeDifference) * 100), 2);
-        toDiffPercent = history.Quote.ToAssetVolumeDifference == 0 ? 0 : Math.Round((history.Quote.ToAssetVolumeDifference / (history.Quote.ToAssetVolume - history.Quote.ToAssetVolumeDifference) * 100), 2);
-
         <tr>
             <td>
                 <ul class="nav">
@@ -69,8 +64,9 @@
             <td>@history.Quote.ToAsset</td>
             <td>@history.Quote.FromAssetVolume</td>
             <td>@history.Quote.ToAssetVolume</td>
-            <td style="@ChangeColor(fromDiffPercent)">@fromDiffPercent</td>
-            <td style="@ChangeColor(toDiffPercent)">@toDiffPercent</td>
+            <td>@history.Quote.DifferenceAsset</td>
+            <td style="@ChangeColor(history.Quote.DifferenceVolumeAbs)">@history.Quote.DifferenceVolumeAbs</td>
+            <td style="@ChangeColor(history.Quote.DifferenceVolumePercent)">@history.Quote.DifferenceVolumePercent</td>
             <td>@history.Quote.IsFromFixed</td>
             <td>@history.Quote.BrokerId</td>
             <td>@history.Quote.AccountId</td>
